@@ -4,6 +4,10 @@ Release 4.1.3
 This is a maintenance release that fixes a number of minor issues discovered since 4.1.2 and upgrades
 HttpCore and HttpClient dependencies.
 
+* [HTTPASYNC-135] HttpAsyncMethods.createHead() methods creates HttpGet objects.
+  Contributed by Mateusz Matela <mateusz dot matela at gmail dot>
+
+
 Changelog
 -------------------
 
